[gd_scene load_steps=2 format=3 uid="uid://by1kd7gx3dumi"]

[ext_resource type="Script" uid="uid://ciiiql14j2sfs" path="res://States/npc_target_lost_zombie.gd" id="1_px0bt"]

[node name="NpcTargetLostZombie" type="Node"]
script = ExtResource("1_px0bt")

[node name="ChaseAfterLOSLostTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="ChaseAfterLOSLostTimer" to="." method="_on_chase_after_los_lost_timer_timeout"]
